# fist

./: .gitignore  LICENSE  README.md  paper.bib  paper.md  pyproject.toml
fist/: __init__py  app.py  cli.py  fist.py
fist/core/: display.py  instruments.py  layout.py  loader.py  scaling.py  sessionmng.py  state.py  transforms.py
fist/static/: ESPRESSO_CCF_A.fits  ESPRESSO_guiding.fits
fist/tools/: analysis.py  arithmetic.py  header.py
